# Skillbox-Homework

./: .gitignore
32.1/: CMakeLists.txt  main.cpp  record
32.2/: CMakeLists.txt  films.json  main.cpp
32.3/: CMakeLists.txt  record.pb.cc  record.pb.h  record.proto
33.1/: CMakeLists.txt  main.cpp
33.2/: CMakeLists.txt  main.cpp
33.3/: CMakeLists.txt  main.cpp
33.4/: CMakeLists.txt  main.cpp
34/: CMakeLists.txt
34.1/: CMakeLists.txt
hw_18/: CMakeLists.txt  main.cpp
hw_18.2/: CMakeLists.txt  main.cpp
hw_18.3/: CMakeLists.txt  main.cpp
hw_18.4/: CMakeLists.txt  main.cpp
hw_19.1/: CMakeLists.txt  main.cpp  words.txt
hw_19.2/: CMakeLists.txt  main.cpp  test.txt
hw_19.3/: CMakeLists.txt  main.cpp
hw_19.4/: CMakeLists.txt  main.cpp
hw_19.5/: CMakeLists.txt  answers.txt  main.cpp  questions.txt
hw_20.1/: CMakeLists.txt  main.cpp  statement.txt
hw_20.2/: CMakeLists.txt  main.cpp  pic.txt
hw_20.3/: CMakeLists.txt  basket.txt  main.cpp  river.txt
hw_20.4/: CMakeLists.txt  main.cpp
hw_21.1/: CMakeLists.txt  main.cpp  statement.txt
hw_21.2/: main.cpp
hw_21.3/: main.cpp
hw_21_2/: CMakeLists.txt  main.cpp
hw_22.1/: CMakeLists.txt  main.cpp
hw_22.2/: CMakeLists.txt  main.cpp
hw_22.3/: CMakeLists.txt  main.cpp
hw_23.1/: CMakeLists.txt  main.cpp
hw_23.2/: CMakeLists.txt  main.cpp
hw_23.3/: CMakeLists.txt  main.cpp
hw_24.1/: CMakeLists.txt  (+1 more)
hw_25.2/: CMakeLists.txt
hw_25.2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
hw_25.2/src/: cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
hw_32.1/: CMakeLists.txt  main.cpp
(+42 files in other folders)
